Fixed padding on mobile

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -13,7 +13,7 @@ html {
 }
 
 body {
-  margin: 1.5rem;
+  padding: 2rem;
   overflow: hidden;
   min-height: 100%;
   text-align: center;
